iter xyz analysis

--- a/ipy_notebooks/denoise_experiment.ipynb
+++ b/ipy_notebooks/denoise_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_lframe_from_img(img):\n",
+    "def detect_aruco(img):\n",
     "    \"\"\"\n",
     "    Detects the lframe from the image\n",
     "\n",
@@ -112,12 +112,13 @@
     "    \"\"\"\n",
     "    aruco_dict = aruco.getPredefinedDictionary(aruco.DICT_ARUCO_ORIGINAL)\n",
     "    arucoParams = aruco.DetectorParameters_create()\n",
-    "    arucoParams.cornerRefinementMethod = aruco.CORNER_REFINE_SUBPIX\n",
+    "    arucoParams.cornerRefinementMethod = aruco.CORNER_REFINE_CONTOUR   \n",
     "    arucoParams.cornerRefinementWinSize = 5\n",
     "    arucoParams.cornerRefinementMinAccuracy = 0.01\n",
-    "    # arucoParams.adaptiveThreshWinSizeMin = 3\n",
-    "    # arucoParams.adaptiveThreshWinSizeMax = 23\n",
-    "    # arucoParams.adaptiveThreshWinSizeStep = 10\n",
+    "    arucoParams.cornerRefinementMaxIterations = 1000\n",
+    "    arucoParams.adaptiveThreshWinSizeMin = 10\n",
+    "    arucoParams.adaptiveThreshWinSizeMax = 50\n",
+    "    arucoParams.adaptiveThreshWinSizeStep = 10\n",
     "    # arucoParams.adaptiveThreshConstant = 7\n",
     "    # arucoParams.minMarkerPerimeterRate = 0.03\n",
     "    # arucoParams.maxMarkerPerimeterRate = 4\n",
@@ -125,8 +126,7 @@
     "    # arucoParams.minCornerDistanceRate = 0.05\n",
     "    # arucoParams.minDistanceToBorder = 3\n",
     "    # arucoParams.minMarkerDistanceRate = 0.05\n",
-    "    # arucoParams.doCornerRefinement = True\n",
-    "    # arucoParams.errorCorrectionRate = 0.6\n",
+    "    arucoParams.aprilTagQuadSigma = 0.8\n",
     "    corners, ids, rejectedImgPoints = aruco.detectMarkers(img, aruco_dict, parameters=arucoParams)\n",
     "\n",
     "    return corners, ids, rejectedImgPoints"
@@ -134,11 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open image file from msgpack\n",
+    "\"\"\"L frame orthogonalization\"\"\"\n",
     "with open(os.path.join(_calib_pth, \"webcam_frame.msgpack\"), \"rb\") as f:\n",
     "    webcam_video = mp.Unpacker(f, object_hook=mpn.decode)\n",
     "\n",
@@ -149,58 +150,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[[311.66998, 450.12094],\n",
-      "        [349.35065, 450.81543],\n",
-      "        [349.365  , 487.2924 ],\n",
-      "        [312.052  , 486.7151 ]]], dtype=float32), array([[[415.25696, 408.12003],\n",
-      "        [449.70493, 410.83093],\n",
-      "        [449.63162, 441.64734],\n",
-      "        [418.60443, 441.86887]]], dtype=float32), array([[[355.48422, 442.16016],\n",
-      "        [324.34485, 442.40042],\n",
-      "        [325.48154, 407.69876],\n",
-      "        [357.11642, 410.8313 ]]], dtype=float32)]\n",
-      "[[ 1.48496365e-01]\n",
-      " [-8.67361738e-19]\n",
-      " [-6.93889390e-18]]\n",
-      "[[5.48602099e-02]\n",
-      " [1.73472348e-18]\n",
-      " [1.88781209e-01]]\n"
+      "[[0.15652663]\n",
+      " [0.        ]\n",
+      " [0.        ]]\n",
+      "[[-1.70042205e-02]\n",
+      " [-3.46944695e-18]\n",
+      " [ 2.02218154e-01]]\n"
      ]
     }
    ],
    "source": [
-    "corners, ids, _ = detect_lframe_from_img(_webcam_img)\n",
-    "print(corners)\n",
-    "\n",
+    "corners, ids, _ = detect_aruco(_webcam_img)\n",
+    "# print(corners)\n",
     "w_rotmat, w_org = calculate_rotmat_from_3markers(corners, ids, marker_length=0.05, camera_matrix=_webcam_cam_mat, dist_coeffs=_webcam_dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(608, 750)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "448\n"
+     ]
     }
    ],
    "source": [
-    "# plt.imshow(webcam_video)\n",
-    "img.shape\n"
+    "\"\"\"open video from msgpack\"\"\"\n",
+    "with open(_webcam_video_pth, \"rb\") as f:\n",
+    "    webcam_video = mp.Unpacker(f, object_hook=mpn.decode)\n",
+    "    counter = 0\n",
+    "    for i in webcam_video:\n",
+    "        _webcam_img = i\n",
+    "        corners, ids, _ = detect_aruco(_webcam_img)\n",
+    "        if ids is not None:\n",
+    "            counter += 1\n",
+    "print(counter)\n",
+    "        "
    ]
   },
   {
