testing video recordings

--- a/ipy_notebooks/video_frame_from_msgpk.ipynb
+++ b/ipy_notebooks/video_frame_from_msgpk.ipynb
@@ -28,11 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open msgpack file\n",
+    "_img = 0\n",
     "counter = 0\n",
     "with open(_video_pth, \"rb\") as _file:\n",
     "    unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n",
@@ -41,6 +42,7 @@
     "        # plt.imshow(i, cmap=\"gray\")\n",
     "        # break\n",
     "        counter += 1\n",
+    "        _img = i\n",
     "\n",
     "        cv2.imshow(\"frame\", i)\n",
     "        cv2.waitKey(1)\n",
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +77,40 @@
    ],
    "source": [
     "counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open msgpack file\n",
+    "# save it as video\n",
+    "# We need to set resolutions.\n",
+    "# so, convert them from float to integer.\n",
+    "h, w = _img.shape\n",
+    "frame_width = int(h)\n",
+    "frame_height = int(w)\n",
+    "   \n",
+    "size = (frame_width, frame_height)\n",
+    "   \n",
+    "# Below VideoWriter object will create\n",
+    "# a frame of above defined The output \n",
+    "# is stored in 'filename.avi' file.\n",
+    "_video_pth = os.path.join(_pth, \"video.avi\")\n",
+    "result = cv2.VideoWriter(_video_pth, \n",
+    "                         cv2.VideoWriter_fourcc(*'MJPG'),\n",
+    "                         15, size)\n",
+    "counter = 0\n",
+    "with open(_video_pth, \"rb\") as _file:\n",
+    "    unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n",
+    "    for i in unpacker:\n",
+    "        counter += 1\n",
+    "        # cv2.imshow(\"frame\", i)\n",
+    "        # cv2.waitKey(1)\n",
+    "        result.write(i)\n",
+    "result.release()"
    ]
   },
   {
