--- a/aruco_algorithm/ssd_tf.ipynb
+++ b/aruco_algorithm/ssd_tf.ipynb
@@ -2,71 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import cv2"
+    "import cv2\n",
+    "import sys\n",
+    "import os\n",
+    "import tensorflow_models\n",
+    "from cv2 import aruco"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.10.0'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.protobuf import text_format\n",
-    "example = text_format.Parse('''\n",
-    "  features {\n",
-    "    feature {key: \"my_feature\"\n",
-    "             value {int64_list {value: [1, 2, 3, 4]} } }\n",
-    "  }''',\n",
-    "  tf.train.Example())"
+    "# import ssd mobile net model\n",
+    "# list packages from tensorflow_models\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path to dataset\n",
+    "_pth = r\"E:\\datasets\\deeptag_pytorch_dataset\"\n",
+    "_deep_tag = os.path.join(_pth, \"deeptag_dataset\")\n",
+    "\n",
+    "_dir_list = os.listdir(_deep_tag)\n",
+    "_file_list = os.listdir(os.path.join(_deep_tag, _dir_list[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'my_feature': <tf.Tensor: shape=(4,), dtype=int64, numpy=array([1, 2, 3, 4], dtype=int64)>}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "error",
+     "evalue": "OpenCV(4.5.3) :-1: error: (-3:Internal error) Overload resolution failed, but no errors reported in function 'detectMarkers'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27720\\763601084.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0m_file_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_deep_tag\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_dir_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mcorners\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrejected\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maruco\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMarkers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mARUCO_DICT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mARUCO_PARAMETERS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcorners\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.5.3) :-1: error: (-3:Internal error) Overload resolution failed, but no errors reported in function 'detectMarkers'\n"
+     ]
     }
    ],
    "source": [
-    "tf.io.parse_example(\n",
-    "    example.SerializeToString(),\n",
-    "    features = {'my_feature': tf.io.RaggedFeature(dtype=tf.int64)})\n"
+    "ARUCO_PARAMETERS = aruco.DetectorParameters_create()\n",
+    "ARUCO_DICT = aruco.Dictionary_get(aruco.DICT_ARUCO_ORIGINAL)\n",
+    "\n",
+    "for i in _file_list:\n",
+    "    img = cv2.imread(os.path.join(_deep_tag, _dir_list[0], i))\n",
+    "    corners, ids, rejected = aruco.detectMarkers(img, ARUCO_DICT, ARUCO_PARAMETERS)\n",
+    "    print(corners, ids)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
