--- a/ipy_notebooks/iterative_coordinate_analysis.ipynb
+++ b/ipy_notebooks/iterative_coordinate_analysis.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Sujith\\\\Documents\\\\Projects\\\\aruco\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14'"
       ]
      },
      "execution_count": 2,
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,129 +221,7 @@
      "output_type": "stream",
      "text": [
       "returning dataframe\n",
-      "processed 0\n",
-      "returning dataframe\n",
-      "processed 1\n",
-      "returning dataframe\n",
-      "processed 2\n",
-      "returning dataframe\n",
-      "processed 3\n",
-      "returning dataframe\n",
-      "processed 4\n",
-      "returning dataframe\n",
-      "processed 5\n",
-      "returning dataframe\n",
-      "processed 6\n",
-      "returning dataframe\n",
-      "processed 7\n",
-      "returning dataframe\n",
-      "processed 8\n",
-      "returning dataframe\n",
-      "processed 9\n",
-      "returning dataframe\n",
-      "processed 10\n",
-      "returning dataframe\n",
-      "processed 11\n",
-      "returning dataframe\n",
-      "processed 12\n",
-      "returning dataframe\n",
-      "processed 13\n",
-      "returning dataframe\n",
-      "processed 14\n",
-      "returning dataframe\n",
-      "processed 15\n",
-      "returning dataframe\n",
-      "processed 16\n",
-      "returning dataframe\n",
-      "processed 17\n",
-      "returning dataframe\n",
-      "processed 18\n",
-      "returning dataframe\n",
-      "processed 19\n",
-      "returning dataframe\n",
-      "processed 20\n",
-      "returning dataframe\n",
-      "processed 21\n",
-      "returning dataframe\n",
-      "processed 22\n",
-      "returning dataframe\n",
-      "processed 23\n",
-      "returning dataframe\n",
-      "processed 24\n",
-      "returning dataframe\n",
-      "processed 25\n",
-      "returning dataframe\n",
-      "processed 26\n",
-      "returning dataframe\n",
-      "processed 27\n",
-      "returning dataframe\n",
-      "processed 28\n",
-      "returning dataframe\n",
-      "processed 29\n",
-      "returning dataframe\n",
-      "processed 30\n",
-      "returning dataframe\n",
-      "processed 31\n",
-      "returning dataframe\n",
-      "processed 32\n",
-      "returning dataframe\n",
-      "processed 33\n",
-      "returning dataframe\n",
-      "processed 34\n",
-      "returning dataframe\n",
-      "processed 35\n",
-      "returning dataframe\n",
-      "processed 36\n",
-      "returning dataframe\n",
-      "processed 37\n",
-      "returning dataframe\n",
-      "processed 38\n",
-      "returning dataframe\n",
-      "processed 39\n",
-      "returning dataframe\n",
-      "processed 40\n",
-      "returning dataframe\n",
-      "processed 41\n",
-      "returning dataframe\n",
-      "processed 42\n",
-      "returning dataframe\n",
-      "processed 43\n",
-      "returning dataframe\n",
-      "processed 44\n",
-      "returning dataframe\n",
-      "processed 45\n",
-      "returning dataframe\n",
-      "processed 46\n",
-      "returning dataframe\n",
-      "processed 47\n",
-      "returning dataframe\n",
-      "processed 48\n",
-      "returning dataframe\n",
-      "processed 49\n",
-      "returning dataframe\n",
-      "processed 50\n",
-      "returning dataframe\n",
-      "processed 51\n",
-      "returning dataframe\n",
-      "processed 52\n",
-      "returning dataframe\n",
-      "processed 53\n",
-      "returning dataframe\n",
-      "processed 54\n",
-      "returning dataframe\n",
-      "processed 55\n",
-      "returning dataframe\n",
-      "processed 56\n",
-      "returning dataframe\n",
-      "processed 57\n",
-      "returning dataframe\n",
-      "processed 58\n",
-      "returning dataframe\n",
-      "processed 59\n",
-      "returning dataframe\n",
-      "processed 60\n",
-      "returning dataframe\n",
-      "processed 61\n"
+      "processed 0\n"
      ]
     },
     {
@@ -353,9 +231,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4492\\3843888163.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m     \u001b[0m_w_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_ar_pose_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_webcam_video_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_cam_mat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_dist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_color\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msingle_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflip_frame\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0m_w_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0madd_time_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_w_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_timestamp_pth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Sujith\\Documents\\Projects\\aruco\\ipy_notebooks\\..\\support\\generate_ar_data.py\u001b[0m in \u001b[0;36mget_ar_pose_data\u001b[1;34m(_pth, cameraMatrix, distCoeffs, process_raw, is_color, single_file, flip_frame, _pth_to_save)\u001b[0m\n\u001b[0;32m    167\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mflip_frame\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    168\u001b[0m                 \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 169\u001b[1;33m             \u001b[0mrotation_vectors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtranslation_vectors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mestimate_ar_pose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcameraMatrix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcameraMatrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdistCoeffs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdistCoeffs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mar_params\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar_params\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mar_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    170\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    171\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mrotation_vectors\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mrotation_vectors\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Sujith\\Documents\\Projects\\aruco\\ipy_notebooks\\..\\support\\generate_ar_data.py\u001b[0m in \u001b[0;36mestimate_ar_pose\u001b[1;34m(frame, cameraMatrix, distCoeffs, is_color, ar_params, ar_dict, board)\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[1;31m# ARUCO_PARAMETERS, ARUCO_DICT, board = camera_parameters()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m     \u001b[0mcorners\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrejectedImgPoints\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maruco\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMarkers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mARUCO_DICT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mARUCO_PARAMETERS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m     \u001b[1;31m# Refine detected markers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22276\\3843888163.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m     \u001b[0m_w_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_ar_pose_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_webcam_video_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_cam_mat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_dist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_color\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msingle_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflip_frame\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0m_w_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0madd_time_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_w_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_timestamp_pth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\ipy_notebooks\\..\\support\\generate_ar_data.py\u001b[0m in \u001b[0;36mget_ar_pose_data\u001b[1;34m(_pth, cameraMatrix, distCoeffs, process_raw, is_color, single_file, flip_frame, _pth_to_save)\u001b[0m\n\u001b[0;32m    167\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mflip_frame\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    168\u001b[0m                 \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 169\u001b[1;33m             \u001b[0mrotation_vectors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtranslation_vectors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mestimate_ar_pose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcameraMatrix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcameraMatrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdistCoeffs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdistCoeffs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mar_params\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar_params\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mar_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    170\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    171\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mrotation_vectors\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mrotation_vectors\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\ipy_notebooks\\..\\support\\generate_ar_data.py\u001b[0m in \u001b[0;36mestimate_ar_pose\u001b[1;34m(frame, cameraMatrix, distCoeffs, is_color, ar_params, ar_dict, board)\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[1;31m# ARUCO_PARAMETERS, ARUCO_DICT, board = camera_parameters()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m     \u001b[0mcorners\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrejectedImgPoints\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maruco\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMarkers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mARUCO_DICT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mARUCO_PARAMETERS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m     \u001b[1;31m# Refine detected markers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -696,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('mira')",
+   "display_name": "Python 3.7.13 ('gs')",
    "language": "python",
    "name": "python3"
   },
@@ -710,12 +588,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
