--- a/ipy_notebooks/create_video_for_all_folders.ipynb
+++ b/ipy_notebooks/create_video_for_all_folders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,17 +10,17 @@
     "import cv2\n",
     "import os\n",
     "import msgpack as mp\n",
-    "import msgpack_numpy as mpn"
+    "import msgpack_numpy as mpn\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "_parent_folder = \"multi_cam_nov_14\"\n",
-    "\n",
     "\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\")\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def convert_and_save(_video_pth, folder_name):\n",
-    "\n",
-    "    fps = folder_name.split(\"_\")[1]\n",
-    "\n",
+    "    fps = int(folder_name.split(\"_\")[1])\n",
     "    h, w = 0, 0\n",
     "\n",
     "    with open(_video_pth, \"rb\") as _file:\n",
@@ -59,10 +56,10 @@
     "            # this is for black and white image\n",
     "            h, w = i.shape\n",
     "            break\n",
-    "\n",
-    "    result = cv2.VideoWriter('video.avi', \n",
+    "    _video_save_pth = os.path.join(_base_pth, _parent_folder, folder_name, \"video.avi\")\n",
+    "    result = cv2.VideoWriter(_video_save_pth, \n",
     "                            cv2.VideoWriter_fourcc(*'MJPG'),\n",
-    "                            fps, (w, h))\n",
+    "                            fps, (w, h), 0)\n",
     "    \n",
     "    with open(_video_pth, \"rb\") as _file:\n",
     "        unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n",
@@ -74,124 +71,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [07:23<00:00,  4.98s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tqdm(_folder_list):\n",
+    "    convert_and_save(os.path.join(_base_pth, _parent_folder,i, \"webcam_color.msgpack\"), folder_name=i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'sk16_15_forward_fast'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_base_pth\n",
-    "_folder_list[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\sk16_15_forward_fast\\\\webcam_color.mgspack'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27236\\1653902395.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mconvert_and_save\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_base_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_folder_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"webcam_color.mgspack\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfolder_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_folder_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27236\\1219231837.py\u001b[0m in \u001b[0;36mconvert_and_save\u001b[1;34m(_video_pth, folder_name)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_video_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0m_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0munpacker\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUnpacker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobject_hook\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmpn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0munpacker\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\sk16_15_forward_fast\\\\webcam_color.mgspack'"
-     ]
-    }
-   ],
-   "source": [
-    "convert_and_save(os.path.join(_base_pth, _folder_list[0], \"webcam_color.mgspack\"), folder_name=_folder_list[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "608 750\n"
+      "100%|██████████| 89/89 [00:01<00:00, 82.06it/s] \n"
      ]
     }
    ],
    "source": [
-    "fps = int(_folder_list[0].split(\"_\")[1])\n",
+    "def remove_video_files(_video_pth):\n",
+    "    os.remove(_video_pth)\n",
     "\n",
-    "_video_pth = r\"C:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\recording_programs\\test_data\\multi_cam_nov_14\\sk16_15_sidways_slow\\webcam_color.msgpack\"\n",
-    "\n",
-    "h, w = 0, 0\n",
-    "\n",
-    "with open(_video_pth, \"rb\") as _file:\n",
-    "    unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n",
-    "    for i in unpacker:\n",
-    "        h, w = i.shape\n",
-    "        break\n",
-    "\n",
-    "result = cv2.VideoWriter('video.mp4', \n",
-    "                        cv2.VideoWriter_fourcc(*'XVID'),\n",
-    "                        fps, (w, h), 0)\n",
-    "\n",
-    "print(h, w)\n",
-    "\n",
-    "with open(_video_pth, \"rb\") as _file:\n",
-    "    unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n",
-    "    for i in unpacker:\n",
-    "        # this is for black and white image\n",
-    "        result.write(i)\n",
-    "        # print(i)\n",
-    "result.release()"
+    "for i in tqdm(_folder_list):\n",
+    "    remove_video_files(os.path.join(_base_pth, _parent_folder,i, i + \".avi\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "750"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(_video_pth, \"rb\") as _file:\n",
-    "    unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
