--- a/ipy_notebooks/iterative_coordinate_analysis.ipynb
+++ b/ipy_notebooks/iterative_coordinate_analysis.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14'"
+       "'c:\\\\Users\\\\Sujith\\\\Documents\\\\Projects\\\\aruco\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14'"
       ]
      },
      "execution_count": 2,
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,9 +461,9 @@
     "    _w_df = add_time_from_file(_w_df, _webcam_timestamp_pth)\n",
     "    \n",
     "\n",
-    "    # w_df = _w_df.copy(deep=True) # comment this if your doing processing\n",
+    "    w_df = _w_df.copy(deep=True) # comment this if your doing processing\n",
     "\n",
-    "    w_df = transform_coordinates_1(_w_df, _webcam_rot, _webcam_org)\n",
+    "    # w_df = transform_coordinates_1(_w_df, _webcam_rot, _webcam_org)\n",
     "\n",
     "    mc_df_pth = os.path.join(_base_pth, folder_df.folder_name[folder_no].split(\"_\")[0], folder_df.folder_name[folder_no]+ \".csv\")\n",
     "    _m_df, st_time = read_df_csv(mc_df_pth)\n",
@@ -484,10 +484,10 @@
     "\n",
     "    w_df = interpolate_target_df(w_df, _m_df)\n",
     "\n",
-    "    # # write to csv file\n",
-    "    # _m_df.to_csv(os.path.join(_analysis_pth, \"coordinates_mc\", folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
-    "    # # write to csv file\n",
-    "    # _w_df.to_csv(os.path.join(_analysis_pth, \"coordinates_webcam_wot\",folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
+    "    # write to csv file\n",
+    "    _m_df.to_csv(os.path.join(_analysis_pth, \"coordinates_mc_2\", folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
+    "    # write to csv file\n",
+    "    _w_df.to_csv(os.path.join(_analysis_pth, \"coordinates_webcam_wot_2\",folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
     "\n",
     "    error_df = pd.DataFrame()\n",
     "    error_df[\"time\"] = _m_df[\"time\"]\n",
@@ -1078,7 +1078,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('gs')",
+   "display_name": "Python 3.7.11 ('mira')",
    "language": "python",
    "name": "python3"
   },
@@ -1092,12 +1092,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
+    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
    }
   }
  },
