--- a/ipy_notebooks/angle_calidation.ipynb
+++ b/ipy_notebooks/angle_calidation.ipynb
@@ -522,7 +522,7 @@
     "plt.plot(_m_df[\"time\"], _theta_y, label=\"theta y\")\n",
     "# plt.plot(_w_df[\"time\"], _ar_ang_df[\"theta_y\"].rolling(7).median(), label=\"theta y ar\")\n",
     "plt.plot(_w_df[\"time\"], savgol_filter(_ar_ang_df[\"theta_y\"].values, 21, 1, mode='nearest'), label=\"theta y ar filtered\")\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   },
   {
