--- a/ipy_notebooks/imu_angle_comparision.ipynb
+++ b/ipy_notebooks/imu_angle_comparision.ipynb
@@ -60,6 +60,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.0"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_sensor_df.mils.diff().max()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
    "outputs": [],
