--- a/ipy_notebooks/iter_coordinate_analysis_graphical.ipynb
+++ b/ipy_notebooks/iter_coordinate_analysis_graphical.ipynb
@@ -290,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('gs')",
+   "display_name": "Python 3.7.11 ('mira')",
    "language": "python",
    "name": "python3"
   },
@@ -304,12 +304,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
+    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
    }
   }
  },
