--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_15fps_sk\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_dec_14\\\\calibration_15fps_01\\\\webcam_color.msgpack'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,23 +39,24 @@
    "source": [
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
+    "_parent_folder = \"single_cam_dec_14\"\n",
+    "_folder_name = \"calibration_15fps_01\"\n",
     "\n",
-    "_folder_name = \"calibration_15fps_sk\"\n",
-    "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"multi_cam_nov_14\", _folder_name,\"webcam_color.msgpack\")\n",
-    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"multi_cam_nov_14\",_folder_name,\"webcam_timestamp.msgpack\")\n",
+    "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",_parent_folder, _folder_name,\"webcam_color.msgpack\")\n",
+    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"webcam_timestamp.msgpack\")\n",
     "_webcam_pth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:01<00:00, 485.88it/s]\n"
+      "100%|██████████| 604/604 [00:07<00:00, 77.93it/s] \n"
      ]
     },
     {
@@ -66,25 +67,18 @@
       "corners_list:  (1793, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[874.59046783   0.         366.44018221]\n",
-      " [  0.         881.45673935 268.42500753]\n",
+      " [[884.99147698   0.         363.00325945]\n",
+      " [  0.         891.12464638 284.09035143]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 1.29040791e-01 -1.00989575e-01  8.05214561e-03  2.63742822e-03\n",
-      "  -5.99529755e+00]]\n"
+      " [[ 1.16282661e-01 -3.20598872e-01  1.42758962e-02  1.88740335e-04\n",
+      "  -2.26061325e+00]]\n"
      ]
     }
    ],
    "source": [
     "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = False, cvt_color=False, saving_name = \"webcam_calibration\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
