--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\cam_and_sensor_feb_1_2023_5cm\\\\calibration_30fps_00\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_dec_14\\\\calibration_60fps_00\\\\webcam_color.msgpack'"
       ]
      },
      "execution_count": 2,
@@ -39,8 +39,8 @@
    "source": [
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
-    "_parent_folder = \"cam_and_sensor_feb_1_2023_5cm\"\n",
-    "_folder_name = \"calibration_30fps_00\"\n",
+    "_parent_folder = \"single_cam_dec_14\"\n",
+    "_folder_name = \"calibration_60fps_00\"\n",
     "\n",
     "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",_parent_folder, _folder_name,\"webcam_color.msgpack\")\n",
     "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"webcam_timestamp.msgpack\")\n",
@@ -56,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1441/1441 [00:01<00:00, 730.50it/s] \n"
+      "100%|██████████| 2205/2205 [00:01<00:00, 1614.20it/s]\n"
      ]
     },
     {
@@ -64,32 +64,26 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1736, 1, 4, 2)\n",
+      "corners_list:  (1789, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[860.92105025   0.         363.84758892]\n",
-      " [  0.         862.8938193  277.67530785]\n",
+      " [[859.59477108   0.         358.01187836]\n",
+      " [  0.         862.39229301 246.71526907]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 0.10193365 -0.70217657  0.0113397   0.00243252  0.3462907 ]]\n"
+      " [[ 2.18761038e-01 -2.04135413e+00 -3.07226034e-03 -5.12762540e-03\n",
+      "   4.62529521e+00]]\n"
      ]
     }
    ],
    "source": [
     "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = False, cvt_color=False, saving_name = \"webcam_calibration\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "amd",
+   "display_name": "Python 3.7.13 ('gs')",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +102,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f7b5cde20a443c2b17446bd8bc340c41b205a603133068520caed36857fb2eca"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
